# pyMNPBEM

./: AUDIT_REPORT.md  COMPLETE_MATLAB_PYTHON_AUDIT_2025-12-09.md  COMPREHENSIVE_CONVERSION_AUDIT_2025.md  CRITICAL_AUDIT_REPORT_2025.md  FINAL_CONVERSION_AUDIT_2025-12-09.md  FULL_CONVERSION_AUDIT_REPORT.md  MATLAB_CONVERSION_AUDIT.md  MATLAB_PYTHON_CONVERSION_AUDIT.md  __init__.py  pyproject.toml  test_bem_ret.py
bem/: __init__.py  bem_iter.py  bem_ret.py  bem_ret_layer.py  bem_ret_layer_iter.py  bem_stat.py  factory.py  plasmonmode.py
examples/: __init__.py  demo_bowtie.py  demo_curvature_effect.py  demo_dipole_ret.py  demo_dipstat_gap.py  demo_dipstat_position.py  demo_eels_ret.py  demo_eels_sphere.py  demo_field_3d.py  demo_hmatrix.py  demo_layer_sphere.py  demo_material_comparison.py  demo_medium_refractive_index.py  demo_mie.py  demo_mie_comparison.py  demo_planewave_ret_angle.py  demo_planewave_ret_coreshell.py  demo_planewave_ret_dimer.py  demo_planewave_ret_rod.py  demo_planewave_ret_sphere.py  demo_planewave_stat_cube.py  demo_planewave_stat_dimer.py  demo_planewave_stat_ellipsoid.py  demo_planewave_stat_materials.py  demo_planewave_stat_medium.py  demo_planewave_stat_rod.py  demo_specstat1.py  demo_symmetry.py
greenfun/: __init__.py  aca.py  comp_green_ret.py  comp_green_stat.py  coverlayer.py  green_ret.py  green_stat.py  green_table_layer.py  hmatrix.py  slicer.py
material/: eps_table.py
mesh2d/: __init__.py  inpoly.py  mesh2d.py  refine.py
mie/: __init__.py  factory.py  mie_ret.py  mie_stat.py  spherical_harmonics.py
misc/: __init__.py  arrays.py  geometry.py  helpers.py  integration.py  meshfield.py  options.py  plotting.py  units.py
particles/: __init__.py  comparticle.py  comparticle_mirror.py  compoint.py  compound.py  compstruct.py  layer_structure.py  particle.py  point.py  (+1 more)
(+110 files in other folders)
